# ZeroTierOne

./: .gitignore  BUILD-OUTPUT-GUIDE.md  CMakeLists.txt  CROSS_PLATFORM_DEPLOY.md  MANAGEMENT_README.md  README.md  SECURITY-CHANGELOG.md  SECURITY-ENHANCEMENTS-EXECUTIVE-SUMMARY.md  SECURITY-IMPLEMENTATION.md  SECURITY-IMPROVEMENTS.md  SECURITY-USAGE-GUIDE.md  WORKFLOW_FIXES.md  build-gui-linux.sh  build-gui-macos.sh  build-gui-windows-clean.bat  build-gui-windows-new.bat  build-gui-windows.bat  build-gui.ps1  build-gui.sh  build-standalone.sh  check-gui-requirements.ps1  check-gui-requirements.sh  create-fallback-exe.bat  cross_platform_manager.py  one.cpp  setup-gui-build.sh  test-gui-minimal.cpp  test-qt-build.bat  universal_builder.py
.github/workflows/: build.yml  build_all.yml  build_linux.yml  build_macos.yml  build_windows.yml  validate.yml
gui/: CMakeLists.txt  main.cpp
gui/common/: BaseGUIManager.cpp  BaseGUIManager.hpp  GUIManager.hpp
gui/qt/: QtGUIManager.cpp  QtGUIManager.hpp
gui/resources/: icons.qrc
gui/resources/linux/: zerotier-one.desktop  zerotier.png.placeholder
gui/resources/windows/: zerotier.rc
include/: ZeroTierOne.h
mobile/: zerotier_mobile.py
node/: Constants.hpp  Mutex.hpp  Packet.hpp
osdep/: Binder.hpp  Http.hpp  ManagedRoute.cpp  OSUtils.cpp  OSUtils.hpp  Phy.hpp  Thread.hpp  WindowsEthernetTap.cpp
rustybits/zeroidc/: Cargo.toml
service/: BandwidthController.cpp  BandwidthController.hpp  MFAManager.cpp  MFAManager.hpp  OneService.cpp  OneService.hpp  SecureAPIManager.cpp  SecureAPIManager.hpp  SoftwareUpdater.cpp
webui/: index.html
windows/: Build-ZeroTierManagement.ps1  management_app.py
windows/ZeroTierOne/: ServiceBase.h  ZeroTierOne.vcxproj  ZeroTierOneService.cpp
